--- a/module/oup-ui/config/oup-ui/blocks/default/document-subcontext/hide-deployments-for-a-project.json
+++ b/module/oup-ui/config/oup-ui/blocks/default/document-subcontext/hide-deployments-for-a-project.json
@@ -4,7 +4,7 @@
     "evaluator": "context-document"
   }, {
     "evaluator": "project-has-title",
-    "condition": "Test"
+    "condition": "Global Academic Platform (Authoring)"
   }],
   "config": {
     "document-subcontext": {
