--- a/module/oup-ui/config/oup-ui/blocks/default/document-subcontext/hide-deployments-for-a-project.json
+++ b/module/oup-ui/config/oup-ui/blocks/default/document-subcontext/hide-deployments-for-a-project.json
@@ -14,7 +14,7 @@
         "header": true,
         "order": 1000,
         "items": [{
-          "key": "document/actions",
+          "key": "document/deployments",
           "remove": true
         }]
       }]
