--- a/module/oup-ui/config/oup-ui/blocks.samples/default/documents-list-buttons/adjust-documents-list-buttons-for-path.json.sample
+++ b/module/oup-ui/config/oup-ui/blocks.samples/default/documents-list-buttons/adjust-documents-list-buttons-for-path.json.sample
@@ -1,11 +1,11 @@
 {
     "evaluator": "document-has-path",
-    "condition": "/All_Journals/---Journals",
+    "condition": "/Journals/Journal_2",
     "config": {
         "documents-list-buttons": [{
             "key": "new",
             "buttons": [{
-                "key": "new_text_document",
+                "key": "new_text_file",
                 "remove": true
             }, {
                 "key": "new_document",
