Changed role from oup-editors to academic-editors

--- a/module/oup-ui/config/oup-ui/blocks.samples/default/content-types/content-types-for-secondary-pages-folder.json.sample
+++ b/module/oup-ui/config/oup-ui/blocks.samples/default/content-types/content-types-for-secondary-pages-folder.json.sample
@@ -2,7 +2,7 @@
     "evaluator": "and",
     "condition": [{
         "evaluator": "current-user-has-team",
-        "condition": "oup-editors"
+        "condition": "academic-editors"
     }, {
         "evaluator": "context-document-has-type",
         "condition": "type:secondarypagesfolder0"   
