--- a/module/oup-ui/config/oup-ui/blocks.samples/default/document-subcontext/hide-json-for-a-editor-group.json.sample
+++ b/module/oup-ui/config/oup-ui/blocks.samples/default/document-subcontext/hide-json-for-a-editor-group.json.sample
@@ -7,7 +7,7 @@
         "items": [{
           "key": "document/json",
           "rejectAuthority": [
-            "oup-editors"
+            "academic-editors"
           ]
         }]
       }]
