--- a/module/oup-ui/config/oup-ui/blocks.samples/default/content-types/content-types-for-oup-editors-team.json.sample
+++ b/module/oup-ui/config/oup-ui/blocks.samples/default/content-types/content-types-for-oup-editors-team.json.sample
@@ -1,6 +1,6 @@
 {
     "evaluator": "current-user-has-team",
-    "condition": "oup-editors",
+    "condition": "academic-editors",
     "config": {
         "content-types": {
             "items": [{
