--- a/module/oup-ui/config/oup-ui/blocks.samples/default/document-actions/hide-change-view-in-api-for-a-user-group.json.sample
+++ b/module/oup-ui/config/oup-ui/blocks.samples/default/document-actions/hide-change-view-in-api-for-a-user-group.json.sample
@@ -3,7 +3,7 @@
         "document-actions": [{
             "key": "view-in-api",
             "rejectAuthority": [
-                "oup-editors"
+                "academic-editors"
             ]
         }]
     }
